# Hackathon2-phase-1-phase2

./: .gitignore  README.md  check_db.py  check_password_hash.py  check_schema.py  create_test_account.js  debug_db.py  definitive_fix_run.js  docker-compose.yml  env.example  fix_mahwish_password.js  init-db.js  migrate_phase_v.py  next.config.ts  package-lock.json  package.json  recreate_mahwish.js  reset_password.py  simulate_dashboard.js  task.md  test_backend.py  test_backend_urllib.py  test_chat.py  test_correct_password.js  tsconfig.json  vercel.json  verify_backend_auth.py  verify_flow.js  verify_mahwish_signin.js
.github/workflows/: deploy.yml  phase_vi_deploy.yml
api/: index.py
app/: page.tsx
app/chat/: page.tsx
backend/: .env  .env.example  Dockerfile  auth.py  check_env.py  dapr_client.py  database.py  main.py  mcp_server.py  migrate_title.py  migrate_v2.py  models.py  pyproject.toml  requirements.txt  system_utils.py
backend/routers/: chat.py  events.py  todos.py
docs/: AI_OPERATIONS_EVIDENCE.md  HACKATHON_JUDGING_GUIDE.md  PHASE_IV_AGENTIC_WORKFLOW.md  PHASE_VI_SDD_AUDIT.md  PHASE_V_SDD_AUDIT.md  SDD_AUDIT_REPORT.md  SDD_ERROR_HANDLING.md
frontend/: .env  Dockerfile  delete_user.js  next.config.ts  package-lock.json  package.json
frontend/app/: page.tsx  (+2 more)
lib/: auth.ts
scripts/: deploy_k8s.ps1  test_recurrence_logic.py  verify_compliance.py
specs/: 003-ai-chatbot-phase3-phase4.md  implementation_plan_phase3_phase4.md  infrastructure_spec.md  phase_iv_sdd_constitution.md  phase_v_gitops_spec.md  phase_vi_deployment_spec.md
types/: todo.ts
(+27 files in other folders)
